// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressBook component should renders correctly when addresses are not present 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(HeadingStyle)
        HeadingLarge="six"
        className="addressBook__separator"
        fontFamily="secondaryFontFamily"
        tag="h4"
      >
        ACC_LBL_ADDRESS_BOOK_HEADING
      </Styled(HeadingStyle)>
      <Styled(EmptyAddressList)
        labels={
          Object {
            "addressBook": Object {},
            "common": Object {},
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="addressBook__row--marginBottom"
    fullBleed={true}
  >
    <Styled(Col)
      className="addressBook__addNewCtaContainer"
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="variable-width"
        data-locator="addressbook-addnewaddress"
        fill="BLUE"
        onClick={[Function]}
      >
        ACC_LBL_ADD_NEW_ADDRESS_CTA
      </Styled(Button)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": "lbl_common_dontDelete",
          "confirm": "lbl_common_YesDelete",
        },
        "description": Object {},
        "heading": "ACC_LBL_DELETE_ADDRESS_HEADING",
        "msg": "lbl_deleteAddressModal_ccAssociatedAddressMsg",
        "title": "ACC_LBL_DELETE_ADDRESS_TITLE",
      }
    }
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
    openState={false}
  />
</div>
`;

exports[`AddressBook component should renders correctly when addresses are present 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(HeadingStyle)
        HeadingLarge="six"
        className="addressBook__separator"
        fontFamily="secondaryFontFamily"
        tag="h4"
      >
        ACC_LBL_ADDRESS_BOOK_HEADING
      </Styled(HeadingStyle)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="addressBook__row--marginBottom"
    fullBleed={true}
  >
    <Styled(Col)
      className="addressBook__addNewCtaContainer"
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="variable-width"
        data-locator="addressbook-addnewaddress"
        fill="BLUE"
        onClick={[Function]}
      >
        ACC_LBL_ADD_NEW_ADDRESS_CTA
      </Styled(Button)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AddressList)
    addresses={
      Immutable.List [
        Object {
          "addressLine": Array [
            "addressline 1",
            "addressline 2",
          ],
          "city": "test city",
          "country": "test country",
          "firstName": "test",
          "lastName": "test",
          "phone1": "1234567890",
        },
      ]
    }
    deleteModalMountedState={false}
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
    setSelectedAddress={[Function]}
  />
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": "lbl_common_dontDelete",
          "confirm": "lbl_common_YesDelete",
        },
        "description": Object {},
        "heading": "ACC_LBL_DELETE_ADDRESS_HEADING",
        "msg": "lbl_deleteAddressModal_ccAssociatedAddressMsg",
        "title": "ACC_LBL_DELETE_ADDRESS_TITLE",
      }
    }
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
    openState={false}
  />
</div>
`;
